source/formulaforce/main/objects/Pit_Stop__c/Pit_Stop__c.object-meta.xml
<CustomObject>
    <description>A Pit Stop during an F1 Grand Prix</description>
    <label>Pit Stop</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Pit Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pit Stops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>