source/formulaforce/main/objects/Pit_Stop__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Pit Stops</relationshipLabel>
    <relationshipName>Pit_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>