source/formulaforce/main/objects/Pit_Stop__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>