source/formulaforce/main/objects/Pit_Stop__c/fields/Lap__c.field-meta.xml
<CustomField>
    <fullName>Lap__c</fullName>
    <label>Lap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>