source/formulaforce/main/objects/Pit_Stop__c/fields/Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Milliseconds__c</fullName>
    <label>Milliseconds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>