source/formulaforce/main/objects/Pit_Stop__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Pit Stops</relationshipLabel>
    <relationshipName>Pit_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>