source/formulaforce/main/objects/Pit_Stop__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>