source/formulaforce/main/objects/Pit_Stop__c/fields/temp_driver__c.field-meta.xml
<CustomField>
    <fullName>temp_driver__c</fullName>
    <label>temp_driverid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>