source/formulaforce/main/objects/Pit_Stop__c/fields/temp_raceid_c__c.field-meta.xml
<CustomField>
    <fullName>temp_raceid_c__c</fullName>
    <label>temp_raceid__c</label>
    <length>25</length>
    <type>Text</type>
</CustomField>