source/formulaforce/main/objects/Pit_Stop__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>