source/formulaforce/main/objects/Pit_Stop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>temp_raceid_c__c</columns>
    <columns>temp_driver__c</columns>
    <columns>Stop__c</columns>
    <columns>Lap__c</columns>
    <columns>Data_Cloud_Id__c</columns>
    <columns>Batch_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>